HelloUltraviolet/Fixtures/RejectedSource/Parallelism/KeyBlockGpuContext/Expected.uv
//! Expected diagnostic metadata for the KeyBlockGpuContext rejected-source specimen.

expectedDiagnostic("E-CON-0155", "rule.20.KeyBlock-GPU-Err")
